--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -10,7 +10,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-cog fa-fw"></i> ผลการติดตาม
+                    <i class="fa fa-list-alt fa-fw"></i> ผลการติดตาม
                     <div class="btn-group pull-right" ng-if="authority == 'ROLE_SUPERADMIN'">
 			            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
 			            	<i class="fa fa-chevron-down"></i>
@@ -23,8 +23,141 @@
 			        </div>
 			        <span class="pull-right">{{ product.productName }}&nbsp&nbsp</span>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="padding: 3px;">
                 
+                	
+                	
+                	
+                	
+                	<div class="panel panel-info" style="margin: 0;">
+						<div class="panel-heading">
+							<form class="form-inline" ng-submit="search()">
+							
+							  <div class="form-group input-group">
+							  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
+							  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.username as option.showname for option in users">
+									<option value="">--ทั้งหมด--</option>
+						  		</select>
+							  </div>
+							
+							  <div class="form-group input-group">
+							   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
+							    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" style="width: 150px;">
+							  </div>
+							  		  
+							   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
+							   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
+							</form>
+						</div>
+						
+						<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+							<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
+								{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ totalItems | number:0 }} {{'pagination.items' | translate}})
+							</span>
+							<pagination ng-change="pageChanged()" total-items="totalItems"
+										first-text="{{'pagination.first' | translate}}"
+										previous-text="{{'pagination.previous' | translate}}"
+										next-text="{{'pagination.next' | translate}}"
+										last-text="{{'pagination.last' | translate}}"
+										ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
+										max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
+										rotate="false" num-pages="numPages" style="margin: auto;" />
+							<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
+								<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+							</span>
+						</div>
+					</div> <!-- / panel panel-info -->
+				
+					<div class="table-responsive" style="padding: 0;">
+						<table class="table table-striped table-hover table-bordered" style="margin: 0;">
+							<thead>
+								<tr>
+									<th style="white-space: nowrap; text-align: center; color: #337AB7;">ลำดับที่</th>
+									
+									
+									<th style="white-space: nowrap; text-align: center;">
+										<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+											วันที่ติดตาม&nbsp;
+											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+										</a>
+									</th>
+									<th style="white-space: nowrap; text-align: center;">
+										<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+											ผลการติดตาม&nbsp;
+											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+										</a>
+									</th>
+									
+									
+									<th style="white-space: nowrap; text-align: center;">
+										<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+											วันนัดชำระ&nbsp;
+											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+										</a>
+									</th>
+									
+									
+									<th style="white-space: nowrap; text-align: center;">
+										<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+											ยอดนัดชำระ&nbsp;
+											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+										</a>
+									</th>
+									
+									
+									<th style="white-space: nowrap; text-align: center;">
+										<a href="" ng-click="columnOrder('sys_nextTimeDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+											วันนัด Call&nbsp;
+											<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+											<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+										</a>
+									</th>
+									<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
+										<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px; position: relative;">
+											{{ h.columnNameAlias || h.columnName }}&nbsp;
+											<i class="fa fa-sort-desc fw" ng-class="{'comm-order-active': (h.columnName == column) && (order == 'desc')}" style="position: absolute; top: 2px;"></i>
+											<i class="fa fa-sort-up fw" ng-class="{'comm-order-active': (h.columnName == column) && (order == 'asc')}" style="position: absolute; top: 2px;"></i>
+										</a>
+									</th>
+								</tr>
+							<thead>
+							<!-- <tbody class="noselect"> -->
+							<tbody>
+								<tr ng-repeat="data in traceDatas track by $index" style="color: #337AB7;">
+									<td style="vertical-align: middle; text-align: center;">
+										{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
+									</td>
+									
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['createdDateTime'] | date:format }}</td>
+									<td style="vertical-align: middle; white-space: nowrap;">{{ data['resultText'] }}</td>
+									
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['appointDate'] | date:format }}</td>
+									
+									<td style="vertical-align: middle; text-align: right; white-space: nowrap;">{{ data['appointAmount'] | number:2 }}</td>
+									
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['nextTimeDate'] | date:format }}</td>
+									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
+										{{ 
+										   h.dataType == 'date' ? (data.taskDetail[h.columnName] | date:format) : 
+										   h.dataType == 'num' ? (data.taskDetail[h.columnName] | number:2) : 
+										   h.dataType == 'sys_owner' ? data.taskDetail[h.columnName][0].showname : data.taskDetail[h.columnName] 
+										}}
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+                	
+                	
+                	
+                	
+                	
+                	
+                	
                 	
 					
                 </div>
