--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -83,13 +83,8 @@
 										</a>
 									</th>
 									<th style="white-space: nowrap; text-align: center;">
-										<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
-											ผลการติดตาม&nbsp;
-											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
-											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
-										</a>
+										 ผลการติดตาม
 									</th>
-									
 									
 									<th style="white-space: nowrap; text-align: center;">
 										<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
@@ -116,6 +111,11 @@
 											<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 										</a>
 									</th>
+									
+									<th style="white-space: nowrap; text-align: center;">
+										Act.|Res.
+									</th>
+									
 									<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
 										<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px; position: relative;">
 											{{ h.columnNameAlias || h.columnName }}&nbsp;
@@ -140,6 +140,9 @@
 									<td style="vertical-align: middle; text-align: right; white-space: nowrap;">{{ data['appointAmount'] | number:2 }}</td>
 									
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['nextTimeDate'] | date:format }}</td>
+									
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['link_actionCode'][0].code }} | {{ data['link_resultCode'][0].code }}</td>
+									
 									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 										{{ 
 										   h.dataType == 'date' ? (data.taskDetail[0][h.columnName] | date:format) : 
