--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -113,7 +113,11 @@
 									</th>
 									
 									<th style="white-space: nowrap; text-align: center;">
-										Act.|Res.
+										Act. Code
+									</th>
+									
+									<th style="white-space: nowrap; text-align: center;">
+										Res. Code
 									</th>
 									
 									<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
@@ -141,7 +145,8 @@
 									
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['nextTimeDate'] | date:format }}</td>
 									
-									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['link_actionCode'][0].code }} | {{ data['link_resultCode'][0].code }}</td>
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['link_actionCode'][0].code }}</td>
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['link_resultCode'][0].code }}</td>
 									
 									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 										{{ 
