--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -76,10 +76,10 @@
 									
 									
 									<th style="white-space: nowrap; text-align: center;">
-										<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+										<a href="" ng-click="columnOrder('createdDateTime')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 											วันที่ติดตาม&nbsp;
-											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
-											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+											<i ng-class="{'comm-order-active': ('createdDateTime' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+											<i ng-class="{'comm-order-active': ('createdDateTime' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 										</a>
 									</th>
 									<th style="white-space: nowrap; text-align: center;">
@@ -87,28 +87,28 @@
 									</th>
 									
 									<th style="white-space: nowrap; text-align: center;">
-										<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+										<a href="" ng-click="columnOrder('appointDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 											วันนัดชำระ&nbsp;
-											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
-											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+											<i ng-class="{'comm-order-active': ('appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+											<i ng-class="{'comm-order-active': ('appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 										</a>
 									</th>
 									
 									
 									<th style="white-space: nowrap; text-align: center;">
-										<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+										<a href="" ng-click="columnOrder('appointAmount')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 											ยอดนัดชำระ&nbsp;
-											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
-											<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+											<i ng-class="{'comm-order-active': ('appointAmount' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+											<i ng-class="{'comm-order-active': ('appointAmount' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 										</a>
 									</th>
 									
 									
 									<th style="white-space: nowrap; text-align: center;">
-										<a href="" ng-click="columnOrder('sys_nextTimeDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+										<a href="" ng-click="columnOrder('nextTimeDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 											วันนัด Call&nbsp;
-											<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
-											<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+											<i ng-class="{'comm-order-active': ('nextTimeDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+											<i ng-class="{'comm-order-active': ('nextTimeDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 										</a>
 									</th>
 									
@@ -121,7 +121,7 @@
 									</th>
 									
 									<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
-										<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px; position: relative;">
+										<a href="" ng-click="columnOrder(h.columnName, 'taskDetail')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 											{{ h.columnNameAlias || h.columnName }}&nbsp;
 											<i class="fa fa-sort-desc fw" ng-class="{'comm-order-active': (h.columnName == column) && (order == 'desc')}" style="position: absolute; top: 2px;"></i>
 											<i class="fa fa-sort-up fw" ng-class="{'comm-order-active': (h.columnName == column) && (order == 'asc')}" style="position: absolute; top: 2px;"></i>
