--- a/backend/src/main/webapp/app/views/import_others/main.html
+++ b/backend/src/main/webapp/app/views/import_others/main.html
@@ -12,11 +12,11 @@
                     <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า&nbsp;
                     <span class="pull-right">{{ productName }}</span>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="padding: 3px;">
                 	<div ui-view>
                 	
-					 <div class="col-lg-12">
-					 	<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
+                		<div class="panel panel-info" style="margin: 0;">
+							<div class="panel-heading">
 
 	                    	<!-- <h3>Upload queue</h3>
 		                    <p>Queue length: {{ uploader.queue.length }}</p> -->
@@ -85,12 +85,9 @@
 		                        </div>
 		                    </div>
 						</div>
-	                </div>
-					
-					
-					<div class="col-lg-12">
-						<div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px;">
-							<span class="input-group-addon" style="border: 0px; background: none;">
+	                
+                		<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+							<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
 								{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{numPages}} ({{'pagination.total' | translate}} {{ totalItems }} {{'pagination.items' | translate}})
 							</span>
 							<pagination ng-change="pageChanged()" total-items="totalItems"
@@ -101,13 +98,14 @@
 										ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
 										max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
 										rotate="false" num-pages="numPages" style="margin: auto;" />
-							<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none;">
+							<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
 								<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
 							</span>
 						</div>
 					</div>
-					<div class="table-responsive col-lg-12">
-						<table class="table table-striped table-hover">
+					
+					<div class="table-responsive">
+						<table class="table table-striped table-hover" style="margin: 0;">
 							<thead>
 								<tr>
 									<th width="10%">ลำดับที่</th>
