--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -97,7 +97,7 @@
 											<i ng-class="{'comm-order-active': ('createdDateTime' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 										</a>
 									</th>
-									<th style="white-space: nowrap; text-align: center;">
+									<th style="white-space: nowrap; text-align: center; color: #337AB7;">
 										 ผลการติดตาม
 									</th>
 									
@@ -127,12 +127,16 @@
 										</a>
 									</th>
 									
-									<th style="white-space: nowrap; text-align: center;">
+									<th style="white-space: nowrap; text-align: center; color: #337AB7;">
 										Act. Code
 									</th>
 									
-									<th style="white-space: nowrap; text-align: center;">
+									<th style="white-space: nowrap; text-align: center; color: #337AB7;">
 										Res. Code
+									</th>
+									
+									<th style="white-space: nowrap; text-align: center; color: #337AB7;">
+										เบอร์โทรใหม่
 									</th>
 									
 									<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
@@ -162,6 +166,8 @@
 									
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['link_actionCode'][0].code }}</td>
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['link_resultCode'][0].code }}</td>
+									
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['tel'] }}</td>
 									
 									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 										{{ 
