--- a/backend/src/main/webapp/app/views/assigntask/main.html
+++ b/backend/src/main/webapp/app/views/assigntask/main.html
@@ -15,12 +15,10 @@
 			            	<i class="fa fa-chevron-down"></i>
 			            </button>
 			            <ul class="dropdown-menu slidedown">
-			                <li ng-repeat="u in productsSelect">
-			                    <a href="" ng-click="changeProduct(u.id)">{{ u.productName }}</a>
-			                </li>
-			            </ul>
+							<li ng-repeat="u in products"><a href="" ng-click="changeProduct(u)">{{ u.productName }}</a></li>
+						</ul>			            
 			        </div>
-			        <span class="pull-right" ng-repeat="u in productsSelect | filter : selectedProduct">{{ u.productName }}&nbsp&nbsp</span>
+			        <span class="pull-right">{{ product.productName }}&nbsp&nbsp</span>
                 </div>
                 <div class="panel-body" style="padding: 3px;">
 					
