--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -18,6 +18,11 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt fa-fw"></i> แสดงรายละเอียดงาน&nbsp;
+                    
+                    <button type="button" class="btn btn-info btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()">
+                    	<i class="fa fa-long-arrow-left"></i>
+                    </button>
+                    
                 </div>
                 <div class="panel-body" style="padding: 3px;">
                 
