--- a/backend/src/main/webapp/app/views/notice/main.html
+++ b/backend/src/main/webapp/app/views/notice/main.html
@@ -7,16 +7,15 @@
 <div class="panel panel-primary">
 	<div class="panel-heading">
 		<i class="fa fa-list-alt  fa-fw"></i> แสดงแบบฟอร์ม Notice&nbsp;
-		<div class="btn-group pull-right"
-			ng-if="authority == 'ROLE_SUPERADMIN'">
+		<div class="btn-group pull-right" ng-show="group0">
 			<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
 				<i class="fa fa-chevron-down"></i>
 			</button>
 			<ul class="dropdown-menu slidedown">
-				<li ng-repeat="u in productsSelect"><a href="" ng-click="changeProduct(u.id, u.productName)">{{ u.productName }}</a></li>
-			</ul>
+				<li ng-repeat="u in products"><a href="" ng-click="changeProduct(u)">{{ u.productName }}</a></li>
+			</ul>			
 		</div>
-		<span class="pull-right">{{ productName }}&nbsp&nbsp</span>
+		<span class="pull-right" ng-show="group0">{{ product.productName }}&nbsp&nbsp</span>
 	</div>
 	<div class="panel-body" style="padding: 3px;">
 
