--- a/backend/src/main/webapp/app/views/result_code/main.html
+++ b/backend/src/main/webapp/app/views/result_code/main.html
@@ -14,7 +14,7 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt fa-fw"></i> แสดง Result Code
-                    <div class="btn-group pull-right" ng-if="authority == 'ROLE_SUPERADMIN'">
+                    <div class="btn-group pull-right" ng-show="group0">
 			            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
 			            	<i class="fa fa-chevron-down"></i>
 			            </button>
@@ -24,7 +24,7 @@
 			                </li>
 			            </ul>
 			        </div>
-			        <span class="pull-right">{{ product.productName }}&nbsp&nbsp</span>
+			        <span class="pull-right" ng-show="group0">{{ product.productName }}&nbsp&nbsp</span>
                 </div>
                 <div class="panel-body" style="padding: 3px;">
                 
