--- a/backend/src/main/webapp/app/views/import_others/main.html
+++ b/backend/src/main/webapp/app/views/import_others/main.html
@@ -9,8 +9,12 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า&nbsp;
-                    <span class="pull-right">{{ productName }}</span>
+                    <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า&nbsp;[{{ productName }}]
+                    
+                    <button type="button" class="btn btn-info btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()" ng-show="isShowBackBtn">
+                    	<i class="fa fa-long-arrow-left"></i>
+                    </button>
+                    
                 </div>
                 <div class="panel-body" style="padding: 3px;">
                 	<div ui-view>
