--- a/backend/src/main/webapp/app/views/import_others/import_others_conf.html
+++ b/backend/src/main/webapp/app/views/import_others/import_others_conf.html
@@ -10,9 +10,11 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }}
-                    <button ng-if="authority == 'ROLE_SUPERADMIN' || url == 'search'" type="button" class="btn btn-warning btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()">
-                    	<i class="fa" ng-class="iconBtn"></i>
+                    
+                    <button type="button" class="btn btn-info btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()" ng-show="isShowBackBtn">
+                    	<i class="fa fa-long-arrow-left"></i>
                     </button>
+                    
                 </div>
                 <div class="panel-body" style="padding: 3px;">
 
