--- a/backend/src/main/webapp/app/views/product/search.html
+++ b/backend/src/main/webapp/app/views/product/search.html
@@ -57,10 +57,10 @@
 				</td>
 				<td>{{ u.createdDateTime | date : 'dd-MM-yyyy hh:mm:ss'}}</td>
 				<td>
-					<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบข้อมูล" ng-click="deleteUser(u.id)" ng-if="authority == 'ROLE_SUPERADMIN'"></i>&emsp;
+					<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบข้อมูล" ng-click="deleteUser(u.id)" ng-show="group0"></i>&emsp;
 					<i class="fa fa-edit fa-lg user-action-icon-primary" title="แก้ใขข้อมูล" ng-click="editUser(u)"></i>&emsp;
 					<i class="fa fa-desktop fa-lg user-action-icon-primary" title="ตั้งค่าการแสดงผลข้อมูล" ng-click="importTaskSetting(u.id, u.productName)"></i>&emsp;
-					<i class="fa fa-database fa-lg user-action-icon-primary" title="ตั้งค่าฐานข้อมูล" ng-click="databaseSetting(u)" ng-if="authority == 'ROLE_SUPERADMIN'"></i>
+					<i class="fa fa-database fa-lg user-action-icon-primary" title="ตั้งค่าฐานข้อมูล" ng-click="databaseSetting(u)" ng-show="group0"></i>
 				</td>
 			</tr>
 		</tbody>
