--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -9,7 +9,7 @@
 		  <div class="form-group">
 		    <input type="text" class="form-control" placeholder="{{'user.search.username_hint' | translate}}" ng-model="$parent.formData.userName">
 		  </div>
-		  <div class="form-group" ng-show="group0">
+		  <div class="form-group" ng-show="group0 || group5">
 			<select name="products" class="form-control" ng-model="$parent.formData.product" ng-options="option.id as option.productName for option in productsSelect">
 				<option value="">---เลือกโปรดักส์---</option>
 		  	</select>
