--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -11,7 +11,7 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt fa-fw"></i> ผลการติดตาม
-                    <div class="btn-group pull-right" ng-show="group0">
+                    <div class="btn-group pull-right" ng-show="group0 || group5">
 			            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
 			            	<i class="fa fa-chevron-down"></i>
 			            </button>
