--- a/backend/src/main/webapp/app/views/home/main.html
+++ b/backend/src/main/webapp/app/views/home/main.html
@@ -12,7 +12,7 @@
 				<div class="col-lg-4 col-lg-offset-4">
 					<div class="panel panel-primary">
 						<div class="panel-heading" style="text-align: center;">
-	                    	<label>The Great Plus.,co.Ltd</label>
+	                    	<label>{{ companyName }}</label>
 	                    </div>
 	                       <div class="panel-body">
 	                       
